[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dockvault"
version = "0.1.0"
description = "dockvault"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "titters" },
]
dependencies = [
    "apscheduler>=3.11.2",
    "docker>=7.1.0",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
dockvault = "dockvault:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dockvault"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
